--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start": "serve -s build",
     "start:prod": "cd server && npm start",
     "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
@@ -12,7 +12,6 @@
     "test": "react-scripts test --env=jsdom",
     "seed": "cd server && npm run seed",
     "heroku-postbuild": "cd client && npm run build"
-    
   },
   "repository": {
     "type": "git",
@@ -22,8 +21,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "serve": "^11.3.2"
   },
   "devDependencies": {
     "concurrently": "^5.2.0"
