--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.4.1",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
+    "http-proxy-middleware": "^1.0.6",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
